k8/vote/vote-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  labels:
    name: voting-service
    app: demo-voting-app
spec:
  selector:
    name: voting-app-pod
    app: demo-voting-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
